Linked the hotel icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel Transylvania</title>
+      <link rel="icon" type="image/x-icon" href="/Icons/Hotelicon.png"/>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -15,11 +16,6 @@
       <h1 class="title">HOTEL TRANSYLVANIA</h1>
     </section>
 
-    <!-- <div class="container">
-      <video src="/Icons/Background_video.mp4" autoplay loop muted></video>
-      <div class="title">
-        <h1>HOTEL TRANSYLVANIA</h1>
-      </div>
-    </div> -->
+   
   </body>
 </html>
