--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel Transylvania</title>
-      <link rel="icon" type="image/x-icon" href="/Icons/Hotelicon.png"/>
+      <link rel="icon" type="image/x-icon" href="Icons/Hotelicon.png"/>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- Top section starts here -->
 
     <section class="showcase">
-      <video src="/Icons/background.mp4" autoplay loop muted></video>
+      <video src="Icons/background.mp4" autoplay loop muted></video>
       <h1 class="title">HOTEL TRANSYLVANIA</h1>
     </section>
 
