--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="icon" type="image/x-icon" href="Icons/Hotelicon.png"/>
     <link rel="stylesheet" href="login.css">
 </head>
 
@@ -33,7 +34,7 @@
                 <a id="submit" href="#">Submit</a>
                 <div id="register">
                     Don't have an account ?
-                    <a href="#">Register</a>
+                    <a href="signup.html">Register</a>
                 </div>
             </div>
         </form>
