link about page with index page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="login-btn" href="signup.html">SignUp</a>
                 <a class="login-btn" href="login.html">Login</a>
                 <div class="navbar-right">
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                     <a href="#">Blog</a>
                     <a href="#">Contact</a>
                 </div>
