--- a/login.html
+++ b/login.html
@@ -28,6 +28,7 @@
             <div class="profile">
                 <h3>Login As:</h3>
                 <select name="monster/human">
+                    <option value="" selected hidden>Choose...</option>
                     <option value="human">Human</option>
                     <option value="Monster">Monster</option>
                 </select>
