Added booking feature

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, suscipit. Voluptate </p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -142,7 +142,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nostrum sequi laborum.</p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -172,7 +172,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor inventore commodi facilis..</p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -208,7 +208,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quos repudiandae nobis!</p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -238,7 +238,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore cupiditate earum molestiae.</p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -268,7 +268,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quae beatae laborum.</p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -332,7 +332,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem possimus ad </p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -362,7 +362,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id incidunt architecto vitae.</p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -392,7 +392,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae eius aliquam non?</p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -428,7 +428,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In ut aperiam harum?</p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -458,7 +458,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod illo laboriosam minus?</p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
@@ -488,7 +488,7 @@
                                                     <div class="item-box-blog-text">
                                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti tenetur laborum placeat!</p>
                                                     </div>
-                                                    <div class="mt"> <a href="#" tabindex="0"
+                                                    <div class="mt"> <a href="booking.html" tabindex="0"
                                                             class="btn bg-blue-ui white read">Book Now</a> </div>
                                                     <!--Book Now Button-->
                                                 </div>
