Added responsiveness in 'what people says' section

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     <h4 align="right">~Monster 1</h4>
                 </div>
             </div>
-            <div class="people">
+            <div class="people people_right">
                 <div class="quote_right">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis ut eveniet suscipit
                     facilis.
