Google Cloud API integrated

--- a/index.html
+++ b/index.html
@@ -596,6 +596,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger-cx/bootstrap.js?v=1"></script>
+    <df-messenger
+        df-cx="true"
+        location="asia-south1"
+        chat-title="booking_agent"
+        agent-id="1fb34e13-e233-4d07-b30a-623f8dee47a9"
+        language-code="en"
+    ></df-messenger>
 </body>
 
 </html>
