--- a/booking.html
+++ b/booking.html
@@ -106,6 +106,15 @@
   <!-- email js ends   -->
 
     <script src="booking.js"></script>
+
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger-cx/bootstrap.js?v=1"></script>
+    <df-messenger
+    df-cx="true"
+    location="asia-south1"
+    chat-title="booking_agent"
+    agent-id="1fb34e13-e233-4d07-b30a-623f8dee47a9"
+    language-code="en"
+    ></df-messenger>
 </body>
 
 </html>
